--- a/web/css/styled.css
+++ b/web/css/styled.css
@@ -15,6 +15,27 @@ BODY {
   font-style: oblique;
 }
 
+.title2 {
+  font-size:x-large;
+  color: #000099;
+  font-style: oblique;
+}
+
+.title3 {
+  font-size:large;
+  color: #000099;
+  font-style: oblique;
+}
+
+.title4 {
+  color: #000099;
+  font-style: oblique;
+}
+
+.data {
+  color: #009900;
+}
+
 .container{
   border: 1px solid red;
   overflow: auto;
