added better support for getting gneomic sequence box

--- a/web/tmpl/GeLo.tmpl
+++ b/web/tmpl/GeLo.tmpl
@@ -13,6 +13,7 @@ function dataset_info_chain(val) {
  kaj.GS('chr_info','<font class="loading"></font>');	
  kaj.GS('di_info','<font class="loading">loading. . .</font>');
  kaj.GS('viewer','<font class="loading"></font>');
+ kaj.GS('get_seq','');	
  if (val) {kaj.GS('di_list', val);}
  get_data_info_info(['di_id'],[dataset_info_chr_chain]);
 }
