changed some css class naems

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -12,6 +12,6 @@
 <TABLE>
  <TR>
   <TD><a href="/CoGe" border=0><img src='/CoGe/picts/<TMPL_VAR NAME=LOGO_PNG>' border=0></a>
-  <TD id="title"><font class="title"><TMPL_VAR NAME=TITLE></font></td>
+  <TD id="title"><font class="title1"><TMPL_VAR NAME=TITLE></font></td>
  </TR>
 </TABLE>
