extensive changes to add supoprt for images

--- a/web/tmpl/FeatListView.tmpl
+++ b/web/tmpl/FeatListView.tmpl
@@ -5,6 +5,10 @@ function edit_list_reload(lid)
    edit_list(['args__'+lid],['main']);
  }
 
+function change( info ) {
+        document.getElementById("info").innerHTML = info;        
+}
+
 </SCRIPT>
 
 <TMPL_IF NAME="FEAT_LIST">
@@ -55,12 +59,12 @@ function edit_list_reload(lid)
 </DIV>
 </TMPL_IF>
 
-<TMPL_IF NAME="EDIT_LIST">1265057
+<TMPL_IF NAME="EDIT_LIST">
 
 
 <DIV id="main">
-
-<div><font class="annotation"><TMPL_VAR LIST_NAME></font>: <TMPL_VAR LIST_DESC></div>
+<font class = "title2">Feature List Editor</font>
+<div><font class="title3"><TMPL_VAR LIST_NAME></font>: <TMPL_VAR LIST_DESC></div>
 
 <TABLE>
  <TR>
@@ -68,6 +72,7 @@ function edit_list_reload(lid)
   <TH>Organism
   <TH>Dataset
   <TH>Type
+  <TH>Location
   <TH>Name(s)
   <TH>Preferred Name
 <TMPL_LOOP NAME=FEATURE_INFO>
@@ -76,6 +81,7 @@ function edit_list_reload(lid)
   <TD><input type="IMAGE" src="picts/delete.png"  onClick=" if (confirm('Are you sure you wish to delete this list?')){ delete_feature(['args__<TMPL_VAR NAME=FEAT_ID>', 'args__<TMPL_VAR NAME=LIST_ID>'], [edit_list_reload]) }">  
   <TD><TMPL_VAR NAME=FEAT_ORG>
   <TD><TMPL_VAR NAME=FEAT_DATA>
+  <TD><TMPL_VAR NAME=FEAT_LOC>
   <TD><TMPL_VAR NAME=FEAT_TYPE>
   <TD><TMPL_VAR NAME=FEAT_NAME>
   <TD><TMPL_VAR NAME=FEAT_PNAME>
@@ -92,14 +98,21 @@ function edit_list_reload(lid)
 <TABLE>
  <TR>
   <TH>Type
+  <TH>Preferred Name
+  <TH>Description
   <TH>Name(s)
   <TH>Organism
+  <TH>Location
 <TMPL_LOOP NAME=FEATURE_INFO>
  <DIV id="FID<TMPL_VAR NAME=FEAT_ID>">
  <TR>
   <TD><TMPL_VAR NAME=FEAT_TYPE>
+  <TD><TMPL_VAR NAME=FEAT_PNAME>
+  <TD><TMPL_VAR NAME=FEAT_DESC>
   <TD nowrap><TMPL_VAR NAME=FEAT_NAME>
   <TD nowrap><TMPL_VAR NAME=FEAT_ORG>
+  <TD nowrap><TMPL_VAR NAME=LOC>
+
  </DIV>
 </TMPL_LOOP>
  
@@ -110,7 +123,7 @@ function edit_list_reload(lid)
 <TMPL_IF NAME="LIST_GROUP">
 
 <DIV id="main">
-<font class="annotation">Feature List Groups:</font>
+<font class="title3">Feature List Groups:</font>
 <TABLE class="columns">
  <TR align = left>
   <TD>
@@ -172,7 +185,7 @@ function edit_list_reload(lid)
 <TMPL_IF NAME=GROUP_VIEW>
 <DIV id="main">
 <font class="title2">Group view:</font><br>
-<font class="annotation"><TMPL_VAR NAME="NAME"></font> <TMPL_VAR NAME="DESC"><BR>
+<font class="title3"><TMPL_VAR NAME="NAME"></font> <TMPL_VAR NAME="DESC"><BR>
 <font class="species"><TMPL_VAR NAME="NOTES"></font>
 <table class="columns">
  <TR align = left>
@@ -194,20 +207,68 @@ function edit_list_reload(lid)
       </DIV>
 </TMPL_LOOP>
 </TABLE>
+
 <table class="columns">
  <tr align="left">
-  <th>Organism:
-  <th>Chromosome:
-  <th>Features:
-  <th>Actions:
+  <th>Organism
+  <th>Location
+  <th>Features
+  <th>Actions
  <TMPL_LOOP NAME=ORG_LOOP>
  <tr valign="top" class="<TMPL_VAR NAME=ROW_BG>">
   <td><TMPL_VAR NAME=ORG_NAME>
-  <td><TMPL_VAR NAME=CHR>
+  <td><TMPL_VAR NAME=LOC>
   <td><TMPL_VAR NAME=FEAT_COUNT>
   <td><TMPL_VAR NAME=ACTIONS>
  </TMPL_LOOP>
 </TABLE>
 <DIV id="genomic_view"></DIV>
+
+</DIV>
+</TMPL_IF>
+
+<TMPL_IF NAME=ADD_IMAGE>
+ <div id="add_image">
+  <input type="submit" value="add image?" onClick="add_image_box(['args__<TMPL_VAR NAME=TYPE>', 'args__<TMPL_VAR NAME=ID>'],['add_image'])">
+ </div>
+</TMPL_IF>
+
+<TMPL_IF NAME=SHOW_IMAGE>
+<table class="columns">
+ <tr align="left">
+  <TH>
+  <TH>Image
+  <TH>Name
+  <TH>Description
+
+ <TMPL_LOOP NAME=IMAGE_LOOP>
+ <tr valign="top" class="<TMPL_VAR NAME=ROW_BG>">
+<!--   <TD><input type="IMAGE" src="picts/edit.png"  onClick="edit_image(['args__<TMPL_VAR NAME=LIST_ID>'],['main']);">-->
+   <TD><input type="IMAGE" src="picts/delete.png" onClick=" if (confirm('Are you sure you wish to delete this image?')){ delete_image(['args__<TMPL_VAR NAME=CID>', 'args__<TMPL_VAR NAME=TYPE>'], []), window.location='<TMPL_VAR RELOAD>';}">  
+   <td><TMPL_VAR NAME=NAME>
+   <td><TMPL_VAR NAME=DESC>
+   <td><TMPL_VAR NAME=IMAGE>
+
+ </TMPL_LOOP>
+ </table>
+</TMPL_IF>
+
+<TMPL_IF NAME=ADD_IMG>
+<form method="post" enctype="multipart/form-data">
+<input type="hidden" name="add_image" id = "add_image" value="1">
+<input type="hidden" name="type" id = "type" value="<TMPL_VAR NAME=TYPE>">
+<input type="hidden" name="id" id = "id" value="<TMPL_VAR NAME=ID>">
+<DIV>Please select an image to upload:  
+<input type = "file" class = "backbox" name= "file">
+<table class="columns">
+ <TR>
+  <TH>Name:
+  <TD><input class="backbox" type="text" name="name" id="name" size="20" maxlength="50" />
+ <TR>
+  <TH>Description:
+  <TD><textarea class="backbox" type="textarea" name="desc" id="desc" rows="5" cols="50" maxlength="2048" /></textarea>
+</table>
+<input type = "submit" value="Add Image">
+</form>
 </DIV>
 </TMPL_IF>
