--- a/web/tmpl/generic_page.tmpl
+++ b/web/tmpl/generic_page.tmpl
@@ -1,5 +1,9 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_VAR NAME="PREBOX">
-<TMPL_INCLUDE NAME="box.tmpl">
+<TMPL_IF NAME="NO_BOX">
+  <TMPL_VAR NAME=BODY>
+<TMPL_ELSE>
+ <TMPL_INCLUDE NAME="box.tmpl">
+</TMPL_IF>
 <TMPL_VAR NAME="POSTBOX">
 <TMPL_INCLUDE NAME="footer.tmpl">
