--- a/web/tmpl/SynView.tmpl
+++ b/web/tmpl/SynView.tmpl
@@ -1,3 +1,4 @@
+<TMPL_IF NAME=SEQ_RETRIEVAL>
 <HTML>
 <HEAD>
  <TITLE><TMPL_VAR NAME=TITLE></TITLE>
@@ -56,50 +57,21 @@ function get(id){
 function feat_search_chain(val, num) {
  if (val) {
   kaj.GS('source'+num, val);
-  feat_search(['accn'+num,'infoid'+num, 'args__'+num],['feat'+num]);
+  feat_search(['accn'+num,'dsid'+num, 'args__'+num],['feat'+num]);
  }
 }
 
 </SCRIPT>
+
 <BODY onload="setup()" >
-<TABLE>
- <TR>
-  <TD><a href="/CoGe" border=0><img src='/CoGe/picts/SynView-logo.png' border=0></a>
-  <TD id="title"><font class="title"><TMPL_VAR NAME=TITLE></font></td>
- </TR>
-</TABLE>
-<DIV id="results" ></DIV>
+
 <input type="button" value="GO"
-onClick="loading([], ['results']); run(['accn1', 'accn2', 'featid1', 'featid2', 'dr1up', 'dr1down', 'dr2up', 'dr2down', 'infoid1', 'infoid2', 'gbaccn1', 'gbaccn2', 'gb1start', 'gb1up', 'gb1down', 'gb2start', 'gb2up', 'gb2down', 'seq1', 'seq2', 'comp1', 'comp2', 'matchfilter', 'spike', 'mask', 'mask_ncs', 'wordsize', 'gapopen', 'gapextend', 'mismatch', 'blastparams','iw','ih', 'feat_h'],['results'], 'POST');"
+onClick="loading([], ['results']); run(['accn1', 'accn2', 'featid1', 'featid2', 'dr1up', 'dr1down', 'dr2up', 'dr2down', 'dsid1', 'dsid2', 'gbaccn1', 'gbaccn2', 'gb1start', 'gb1up', 'gb1down', 'gb2start', 'gb2up', 'gb2down', 'seq1', 'seq2', 'comp1', 'comp2', 'matchfilter', 'spike', 'mask', 'mask_ncs', 'wordsize', 'gapopen', 'gapextend', 'mismatch', 'blastparams','iw','ih', 'feat_h'],['results'], 'POST');"
 >   &nbsp;&nbsp;
 
 
 <input type="button" value="Clear"
  onClick="rset([],['results'])">
-<table width="100%" border="0" cellspacing="0" cellpadding="0" border=0>
- <tr> 
-  <td width="6"><img src="/CoGe/picts/table/table_bg_head_tl.png" width="6" height="23"></td>
-  <td width="6"  background="/CoGe/picts/table/table_bg_head_t.png">&nbsp;</td>
-  <td width="100%"  background="/CoGe/picts/table/table_bg_head_t.png"><font class="oblique">Sequence Retrieval</font></td>
-  <td width="6"  background="/CoGe/picts/table/table_bg_head_t.png">&nbsp;</td>
-  <td width="6"><img src="/CoGe/picts/table/table_bg_head_tr.png" width="6" height="23"></td>
- </tr>
- <tr> 
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_head_l.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_tl.png" width="6" height="9"></td>
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_body_t.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_tr.png" width="6" height="9"></td>
-  <td height="9" valign="top" width="6" background="/CoGe/picts/table/table_bg_head_r.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
- </tr>
- <tr>
-  <td background="/CoGe/picts/table/table_bg_head_l.png">&nbsp;</td>
-  <td background="/CoGe/picts/table/table_bg_body_l.png">&nbsp;</td>
-  <td> 
-<!-- ########################################## -->
-<!-- Main body of the central table goes in here-->
-<!-- ########################################## -->
-<DIV>
-
 <form method="post" enctype="multipart/form-data" name="main_form" onSubmit="">
 <TABLE class="basic" width=100%>
  <TR>
@@ -126,8 +98,8 @@ onClick="loading([], ['results']); run(['accn1', 'accn2', 'featid1', 'featid2', 
       <TABLE>
        <TR valign="top">
         <TD>Name:
-        <TD><input class="backbox" type="text" name="accn1" id="accn1" tabindex="1"  size="20" onBlur="source_search(['accn1','args__1'],[feat_search_chain])" value="<TMPL_VAR NAME=ACCN1>" />
-        <DIV id="source1"><input type="hidden" id="infoid1"></DIV>
+        <TD><input class="backbox" type="text" name="accn1" id="accn1" tabindex="1"  size="20" onBlur="dataset_search(['accn1','args__1'],[feat_search_chain])" value="<TMPL_VAR NAME=ACCN1>" />
+        <DIV id="source1"><input type="hidden" id="dsid1"></DIV>
         <DIV id="feat1"><input type="hidden" id="featid1"></DIV>
        <TR>
        <TD><DIV class="small">Upstream:</DIV>
@@ -142,8 +114,8 @@ onClick="loading([], ['results']); run(['accn1', 'accn2', 'featid1', 'featid2', 
       <TABLE>
        <TR valign="top">
         <TD>Name:
-        <TD><input class="backbox" type="text" name="accn2" id="accn2" tabindex="1"  size="20" onBlur="source_search(['accn2','args__2'],[feat_search_chain])" value="<TMPL_VAR NAME=ACCN2>" />
-        <DIV id="source2"><input type="hidden" id="infoid2"></DIV>
+        <TD><input class="backbox" type="text" name="accn2" id="accn2" tabindex="1"  size="20" onBlur="dataset_search(['accn2','args__2'],[feat_search_chain])" value="<TMPL_VAR NAME=ACCN2>" />
+        <DIV id="source2"><input type="hidden" id="dsid2"></DIV>
         <DIV id="feat2"><input type="hidden" id="featid2"></DIV>
        <TR>
        <TD><DIV class="small">Upstream:</DIV>
@@ -169,7 +141,7 @@ onClick="loading([], ['results']); run(['accn1', 'accn2', 'featid1', 'featid2', 
    <DIV class="mainDiv" >
    <DIV id="isr" class="topItem" onMouseOver="Init(this);changeColor('isr','#000099'); " onMouseOut="changeColor('isr','#009900');" >Internet Sequence Retrieval:</DIV>
    <DIV class="dropMenu">
-     <DIV class="subMenu" style="display:none;" >
+     <DIV class="subMenu" style="display:inline;" >
      <TABLE style="width: 100%;">
       <TR>
       <TD>        
@@ -244,53 +216,11 @@ onClick="loading([], ['results']); run(['accn1', 'accn2', 'featid1', 'featid2', 
   </DIV>		
  </TR>
 </TABLE>
+</TMPL_IF>
 
 
 
- </td>
-  <td  background="/CoGe/picts/table/table_bg_body_r.png">&nbsp;</td>
-  <td  background="/CoGe/picts/table/table_bg_head_r.png">&nbsp;</td>
- </tr>
- <tr> 
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_head_l.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_bl.png" width="6" height="9"></td>
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_body_b.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_br.png" width="6" height="9"></td>
-  <td height="9" valign="top" width="6" background="/CoGe/picts/table/table_bg_head_r.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
- </tr>
- <tr> 
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_bl.png" width="6" height="9"></td>
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_b.png" width="6" height="9"></td>
-  <td height="9" valign="bottom" background="/CoGe/picts/table/table_bg_head_b.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_b.png" width="6" height="9"></td>
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_br.png" width="6" height="9"></td>
- </tr>
-</table> 
-
-
-<table width="100%" border="0" cellspacing="0" cellpadding="0" border=0>
- <tr> 
-  <td width="6"><img src="/CoGe/picts/table/table_bg_head_tl.png" width="6" height="23"></td>
-  <td width="6"  background="/CoGe/picts/table/table_bg_head_t.png">&nbsp;</td>
-  <td width="100%"  background="/CoGe/picts/table/table_bg_head_t.png" class = "oblique">Additional Options</td>
-  <td width="6"  background="/CoGe/picts/table/table_bg_head_t.png">&nbsp;</td>
-  <td width="6"><img src="/CoGe/picts/table/table_bg_head_tr.png" width="6" height="23"></td>
- </tr>
- <tr> 
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_head_l.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_tl.png" width="6" height="9"></td>
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_body_t.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_tr.png" width="6" height="9"></td>
-  <td height="9" valign="top" width="6" background="/CoGe/picts/table/table_bg_head_r.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
- </tr>
- <tr>
-  <td background="/CoGe/picts/table/table_bg_head_l.png">&nbsp;</td>
-  <td background="/CoGe/picts/table/table_bg_body_l.png">&nbsp;</td>
-  <td> 
-<!-- ########################################## -->
-<!-- Main body of the central table goes in here-->
-<!-- ########################################## -->
-
+<TMPL_IF NAME=OPTIONS>
 <TABLE class="basic" width=100%>
  <TR>
   <TH colspan="2">
@@ -552,33 +482,13 @@ onClick="loading([], ['results']); run(['accn1', 'accn2', 'featid1', 'featid2', 
 
 
 
- </td>
-  <td  background="/CoGe/picts/table/table_bg_body_r.png">&nbsp;</td>
-  <td  background="/CoGe/picts/table/table_bg_head_r.png">&nbsp;</td>
- </tr>
- <tr> 
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_head_l.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_bl.png" width="6" height="9"></td>
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_body_b.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_br.png" width="6" height="9"></td>
-  <td height="9" valign="top" width="6" background="/CoGe/picts/table/table_bg_head_r.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
- </tr>
- <tr> 
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_bl.png" width="6" height="9"></td>
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_b.png" width="6" height="9"></td>
-  <td height="9" valign="bottom" background="/CoGe/picts/table/table_bg_head_b.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_b.png" width="6" height="9"></td>
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_br.png" width="6" height="9"></td>
- </tr>
-</table> 
-
 <input type="button" value="GO"
 onClick="
 //source_search(['accn1','args__1'],['org1']);
 //source_search(['accn2','args__2'],['org2']); 
 loading([], ['results']);
 run(['accn1', 'accn2', 'featid1', 'featid2', 'dr1up', 'dr1down', 'dr2up', 'dr2down',
-'infoid1', 'infoid2', 'gbaccn1', 'gbaccn2', 'gb1start', 'gb1up',
+'dsid1', 'dsid2', 'gbaccn1', 'gbaccn2', 'gb1start', 'gb1up',
 'gb1down', 'gb2start', 'gb2up', 'gb2down', 'seq1', 'seq2', 'comp1',
 'comp2', 'matchfilter', 'spike', 'mask', 'mask_ncs', 'wordsize',
 'gapopen', 'gapextend', 'mismatch', 'blastparams','iw','ih',
@@ -597,3 +507,7 @@ run(['accn1', 'accn2', 'featid1', 'featid2', 'dr1up', 'dr1down', 'dr2up', 'dr2do
 </form>
 </BODY>
 </HTML>
+</TMPL_IF>
+<TMPL_IF NAME="RESULTS_DIV">
+<DIV id="results" ></DIV>
+</TMPL_IF>
