--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -11,7 +11,7 @@
 <BODY <TMPL_VAR NAME=BODY_TAG>>
 <TABLE>
  <TR>
-  <TD><a href="/CoGe" border=0><img src='/CoGe/picts/<TMPL_VAR NAME=LOGO_PNG>' border=0></a>
+  <TD><TMPL_IF NAME=LOGO_PNG><a href="<TMPL_IF NAME=HEADER_LINK><TMPL_VAR NAME=HEADER_LINK><TMPL_ELSE>/CoGe</TMPL_IF>" border=0><img src='/CoGe/picts/<TMPL_VAR NAME=LOGO_PNG>' border=0></a></TMPL_IF>
   <TD id="title"><font class="title1"><TMPL_VAR NAME=TITLE></font></td>
  </TR>
 </TABLE>
