--- a/web/tmpl/GeLo.tmpl
+++ b/web/tmpl/GeLo.tmpl
@@ -2,29 +2,41 @@
 
 <script language="javascript">
 
-function dataset_chain() {
- kaj.GS('ds_list','<font class="loading"></font>');
- kaj.GS('ds_info','<font class="loading"></font>');
- kaj.GS('chr_info','<font class="loading"></font>');
+function dataset_chain(val) {
+ if (val) {kaj.GS('org_list', val);}
+ kaj.GS('ds_list','<font class="loading1. . ."></font>');
+ kaj.GS('ds_info','<input type=hidden id = "chr">');
+ kaj.GS('chr_info','<input type=hidden id = "ds_id">');
  get_dataset(['org_id'],[dataset_info_chain]);
 }
 
 function dataset_info_chain(val) {
- kaj.GS('chr_info','<font class="loading"></font>');
- kaj.GS('ds_info','<font class="loading">loading. . .</font>');
+ kaj.GS('chr_info','<input type=hidden id = "ds_id"><font class="loading"></font>');
+ kaj.GS('ds_info','<input type=hidden id = "chr"><font class="loading">loading. . .</font>');
  kaj.GS('viewer','<font class="loading"></font>');
  kaj.GS('get_seq','');
  if (val) {kaj.GS('ds_list', val);}
  get_dataset_info(['ds_id'],[dataset_info_chr_chain]);
 }
 
-function dataset_info_chr_chain(val, chr) {
- kaj.GS('chr_info','<font class="loading">loading. . .</font>');
+function dataset_info_chr_chain(val) {
+ kaj.GS('chr_info','<input type=hidden id = "ds_id"><font class="loading">loading. . .</font>');
+ kaj.GS('ds_info','<input type=hidden id = "chr"><font class="loading">loading. . .</font>');
  kaj.GS('viewer','<font class="loading"></font>');
  kaj.GS('get_seq','');
- if (val) {kaj.GS('ds_info', val); kaj.GS('chr_info','');}
- kaj.GS('chr_info','<font class="loading">searching for features. . .</font>');
+ if (val) {kaj.GS('ds_info', val); kaj.GS('chr_info','<font class="loading">searching for features. . .</font>');}
  get_dataset_chr_info(['ds_id', 'chr'],['chr_info', 'viewer', 'get_seq']);
+}
+
+function get_organism_name_chain(val)
+{
+ kaj.GS('org_list', '<input type=hidden id = "org_id"><font class="loading"></font>');
+ kaj.GS('ds_list','<input type=hidden id = "ds_id">');
+ kaj.GS('chr_info','');
+ kaj.GS('ds_info','<input type=hidden id = "chr">');
+ kaj.GS('viewer','');
+ get_orgs(['args__'+val], [dataset_chain]);	 
+
 }
 
 function launch_viewer (dsd, chr) {
@@ -40,6 +52,8 @@ function launch_viewer (dsd, chr) {
  <TR>
   <TD valign=top>
    <DIV class = "oblique">Organisms</DIV>
+   <DIV id="org_name"><TMPL_VAR NAME="ORG_NAME"></DIV>
+   <DIV id="blah">Organism Name: <input type="text" size=10 value="" name = "org_name" id="org_name" onKeyUp='get_organism_name_chain(this.value);'></DIV>
    <DIV id="org_list"><TMPL_VAR NAME="ORG_LIST"></DIV>
    <DIV id="viewer"></DIV>
    <DIV id="get_seq"></DIV>
