change function dataset_info_chain to remove a misplaced hidden tag for ds_id

--- a/web/tmpl/GeLo.tmpl
+++ b/web/tmpl/GeLo.tmpl
@@ -11,7 +11,7 @@ function dataset_chain(val) {
 }
 
 function dataset_info_chain(val) {
- kaj.GS('chr_info','<input type=hidden id = "ds_id"><font class="loading"></font>');
+ kaj.GS('chr_info','<font class="loading"></font>');
  kaj.GS('ds_info','<input type=hidden id = "chr"><font class="loading">loading. . .</font>');
  kaj.GS('viewer','<font class="loading"></font>');
  kaj.GS('get_seq','');
