added a hiddten input type for ds_id to function dataset_chain

--- a/web/tmpl/GeLo.tmpl
+++ b/web/tmpl/GeLo.tmpl
@@ -4,7 +4,7 @@
 
 function dataset_chain(val) {
  if (val) {kaj.GS('org_list', val);}
- kaj.GS('ds_list','<font class="loading1. . ."></font>');
+ kaj.GS('ds_list','<input type=hidden id = "ds_id"><font class="loading. . ."></font>');
  kaj.GS('ds_info','<input type=hidden id = "chr">');
  kaj.GS('chr_info','<input type=hidden id = "ds_id">');
  get_dataset(['org_id'],[dataset_info_chain]);
