--- a/web/tmpl/FeatView.tmpl
+++ b/web/tmpl/FeatView.tmpl
@@ -21,12 +21,12 @@ function search_chain(val) {
  } 
  kaj.GS('DS_title','');
  kaj.GS('FT_title','');
- kaj.GS('accn_list','');	
- kaj.GS('Source','');	
- kaj.GS('FeatType','');	
+ kaj.GS('accn_list','<input type="hidden" id="accn_select">');	
+ kaj.GS('Source','<input type="hidden" id="dsid">');	
+ kaj.GS('FeatType','<input type="hidden" id="Type_name">');	
  kaj.GS('anno','');	
  if (val == 1 || kaj.GS('accn').length > minlen) {
-   kaj.GS('DS_title','<font class="loading">Searching. . .</font>');// for "'+kaj.GS('accn')+'" type '+''+'. . .</font>');
+//   kaj.GS('DS_title','<font class="loading">Searching. . .</font>');// for "'+kaj.GS('accn')+'" type '+''+'. . .</font>');
    cogesearch(['accn', 'type', 'org'],[source_search_chain]); 
  }
 }
@@ -34,8 +34,8 @@ function search_chain(val) {
 function source_search_chain (val) {
  kaj.GS('DS_title','');
  kaj.GS('FT_title','');
- kaj.GS('Source','<font class="loading">Loading. . .</font>');	
- kaj.GS('FeatType','');	
+ kaj.GS('Source','<input type="hidden" id="dsid"><font class="loading">Loading. . .</font>');	
+ kaj.GS('FeatType','<input type="hidden" id="Type_name">');	
  kaj.GS('anno','');	
  if (val) {kaj.GS('accn_list',val);}
  source_search(['accn_select'], [get_types_chain]);
@@ -43,17 +43,17 @@ function source_search_chain (val) {
 
 function get_types_chain (val1, val2) {
  kaj.GS('FT_title','');
- kaj.GS('FeatType','<font class="loading">Loading. . .</font>');	
+ kaj.GS('FeatType','<input type="hidden" id="Type_name"><font class="loading">Loading. . .</font>');	
  kaj.GS('anno','');	
  if (val1) {kaj.GS('Source', val1);}
- if (val2) {kaj.GS('DS_title', "Dataset");}
+// if (val2) {kaj.GS('DS_title', "Dataset");}
  get_types(['accn_select', 'dsid'],[get_anno_chain]);	
 }
 
 function get_anno_chain (val1, val2) {
  kaj.GS('anno','<font class="loading">Loading. . .</font>');	
  if (val1) {kaj.GS('FeatType', val1)};
- if (val2) {kaj.GS('FT_title', "Type Name");}
+// if (val2) {kaj.GS('FT_title', "Type Name");}
  as = kaj.G('accn_select');
 // v = kaj.G('version');
  tn = kaj.G('Type_name');
